--- a/client/package.json
+++ b/client/package.json
@@ -1,36 +1,30 @@
 {
-  "name": "blog-client",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@types/jest": "24.0.22",
-    "@types/node": "12.12.6",
-    "@types/react": "16.9.11",
-    "@types/react-dom": "16.9.3",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0",
-    "typescript": "3.7.2"
-  },
+  "name": "with-typescript",
+  "version": "1.0.0",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "next",
+    "build": "next build",
+    "start": "next start",
+    "type-check": "tsc"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "dependencies": {
+    "@zeit/next-stylus": "^1.0.1",
+    "antd": "^3.25.2",
+    "autoprefixer": "^9.7.2",
+    "babel-plugin-import": "^1.12.2",
+    "isomorphic-unfetch": "3.0.0",
+    "next": "^9.1.4",
+    "next-compose-plugins": "^2.2.0",
+    "poststylus": "^1.0.0",
+    "react": "^16.10.1",
+    "react-dom": "^16.10.1",
+    "stylus": "^0.54.7"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "devDependencies": {
+    "@types/node": "^12.7.8",
+    "@types/react": "^16.9.3",
+    "@types/react-dom": "^16.9.1",
+    "typescript": "3.6.3"
+  },
+  "license": "ISC"
 }
