--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "isomorphic-unfetch": "3.0.0",
     "next": "^9.1.4",
     "next-compose-plugins": "^2.2.0",
+    "next-transpile-modules": "^2.3.1",
     "poststylus": "^1.0.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
