--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@zeit/next-stylus": "^1.0.1",
     "antd": "^3.25.2",
     "autoprefixer": "^9.7.2",
+    "axios": "^0.19.0",
     "babel-plugin-import": "^1.12.2",
     "isomorphic-unfetch": "3.0.0",
     "next": "^9.1.4",
